# django-playground

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
ebooksapi/ebooks/: models.py
ebooksapi/ebooks/api/: permissions.py  serializers.py  urls.py  views.py
ebooksapi/ebooks/migrations/: 0001_initial.py  0002_ebook_publication_date.py  0003_auto_20200828_1555.py
ebooksapi/ebooksapi/: settings.py  urls.py
everycheese/: CONTRIBUTORS.md
everycheese/config/: urls.py
everycheese/config/settings/: base.py
everycheese/everycheese/cheeses/: admin.py  models.py  urls.py  views.py
everycheese/everycheese/templates/: base.html
everycheese/everycheese/tests/: tests.py
intro_dfr_example/: manage.py
intro_dfr_example/intro_dfr_example/: asgi.py  settings.py  urls.py  wsgi.py
intro_dfr_example/products/: models.py  urls.py  views.py
intro_dfr_example/products/migrations/: 0001_initial.py
jobboardapi/jobboardapi/: asgi.py  settings.py  urls.py  wsgi.py
jobboardapi/jobs/: models.py
jobboardapi/jobs/api/: serializers.py  urls.py  views.py
jobboardapi/jobs/migrations/: 0001_initial.py  0002_auto_20200827_1317.py
newsapi/news/: models.py
newsapi/news/api/: serializers.py  urls.py  views.py
newsapi/newsapi/: settings.py  urls.py
profilesapi/clients_test/: token_auth_test1.py  token_auth_test2.py
profilesapi/profiles/: models.py  signals.py  tests.py
profilesapi/profilesapi/: settings.py  urls.py
quotesapi/quotes/: models.py
quotesapi/quotesapi/: settings.py  urls.py
simple_meeting_app_starter_project/: db.sqlite3  manage.py
simple_meeting_app_starter_project/meetings/: models.py  urls.py  views.py
simple_meeting_app_starter_project/simple_meeting_app_starter_project/: .gitignore  asgi.py  settings.py  urls.py  wsgi.py
simple_meeting_app_starter_project/website/: views.py
(+31 files in other folders)
