[tool.poetry]
name = "django-playground"
version = "0.1.0"
description = ""
authors = ["Lazos Doug <lazarosd89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
