[tool.poetry]
name = "django-playground"
version = "0.1.0"
description = ""
authors = ["Lazos Doug <lazarosd89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
pylint = "^2.5.3"
pillow = "^7.2.0"
djangorestframework = "^3.11.1"
django-rest-auth = "^0.9.5"
requests = "^2.24.0"
django-allauth = "^0.42.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
django-crispy-forms = "^1.9.2"
django-autoslug = "^1.9.8"
django-model-utils = "^4.0.0"
argon2-cffi = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
pylint-django = "^2.3.0"
flake8 = "^3.8.3"
django-debug-toolbar = "^3.1.1"
django-extensions = "^3.0.9"
django-coverage-plugin = "^1.8.0"
pytest-django = "^3.10.0"
factory_boy = "^3.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
